# matching

./: .coveralls.yml  .flake8  .gitignore  .nojekyll  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGES.html  CHANGES.md  CHANGES.rst  CITATION.cff  CITATION.rst  CONTRIBUTING.rst  INSTALLATION.rst  README.md  README.rst  _quarto.yml  bibliography.html  citation.html  contributing.html  index.html  listings.json  paper.bib  paper.html  paper.md  pyproject.toml  requirements.txt  robots.txt  search.json  setup.py  sitemap.xml  tox.ini
.github/workflows/: ci.yml  docs.yml
_docs/: _quarto.yml  bibliography.qmd  index.qmd
_docs/_site/: index.html
_docs/_site/tutorials/: hospital_resident.html  index.html  stable_marriage.html  student_allocation.html
_docs/assets/: bibliography.bib
_docs/discussion/: index.qmd
_docs/how-to/: check_matching_status.ipynb  create_from_dictionaries.ipynb  create_from_instances.ipynb  remove_banned_pairs.ipynb
_docs/reference/: SingleMatching.qmd  hospital_resident.qmd
_docs/tutorials/: hospital_resident.ipynb  index.qmd  stable_marriage.ipynb  stable_roommates.ipynb  student_allocation.ipynb
discussion/: hospital_resident.html  index.html  stable_marriage.html  stable_roommates.html  student_allocation.html
discussion/other_packages/: index.html
docs/: .gitignore  Makefile  _quarto.yml  bibliography.bib  bibliography.html  bibliography.qmd  citation.html  citation.qmd  conf.py  contributing.html  contributing.qmd  environment.yml  index.html  index.qmd  index.rst  requirements.txt
docs/data/: projects.csv  spaces.csv  students.csv  supervisors.csv
docs/discussion/: changes.html  changes.qmd  game_theory.rst  hospital_resident.html  hospital_resident.md  index.html  index.qmd  index.rst  other_packages.rst  stable_marriage.html  stable_marriage.md  stable_roommates.html  stable_roommates.md  student_allocation.html  student_allocation.md
docs/discussion/hospital_resident/: algorithm.rst  definitions.rst  example.rst  index.rst
docs/discussion/other_packages/: index.html  index.qmd  index.yml
docs/discussion/stable_marriage/: algorithm.rst  definitions.rst  example.rst  index.rst
docs/discussion/stable_roommates/: algorithm.rst  definitions.rst  example.rst  index.rst
docs/how-to/: check_matching_status.html  check_matching_status.ipynb  choose_optimality.html  choose_optimality.ipynb  create_from_dictionaries.html  create_from_dictionaries.ipynb  create_from_instances.html  create_from_instances.ipynb  index.html  index.qmd  index.rst  remove_banned_pairs.html  remove_banned_pairs.ipynb
docs/reference/: Hospital.html  Hospital.qmd  HospitalResident.html  HospitalResident.qmd  MultipleMatching.html  MultipleMatching.qmd  Player.html  Player.qmd  Project.html  Project.qmd  SingleMatching.html  StableMarriage.html  StableMarriage.qmd  StableRoommates.html  StableRoommates.qmd  StudentAllocation.html  StudentAllocation.qmd  Supervisor.html  Supervisor.qmd  base.html  base.qmd  bibliography.rst  citation.rst  contributing.rst  exceptions.html  exceptions.qmd  hospital_resident.html  index.html  index.qmd  index.rst  source.rst  stable_marriage.html  stable_marriage.qmd  stable_roommates.html  stable_roommates.qmd  student_allocation.html  student_allocation.qmd
docs/tex/: hr_matching.tex  make.py  matching_stable.tex  sa_matching.tex  sm_matching.tex  sm_unstable.tex  sr_matching.tex  sr_unstable.tex
docs/tutorials/: hospital_resident.html  hospital_resident.ipynb  index.html  index.rst  installation.rst  stable_marriage.html  stable_marriage.ipynb  stable_roommates.html  stable_roommates.ipynb  student_allocation.html  student_allocation.ipynb  tutorial_iii.rst
how-to/: check_matching_status.html  choose_optimality.html  create_from_dictionaries.html  create_from_instances.html  index.html  remove_banned_pairs.html
matching/: __init__.py  algorithms.py
matching/tests/: test_algorithms.py
paper/: paper.bib  paper.md  template.tex
reference/: Hospital.html  HospitalResident.html  MultipleMatching.html  Player.html  Project.html  SingleMatching.html  StableMarriage.html  StableRoommates.html  StudentAllocation.html  Supervisor.html  base.html  exceptions.html  hospital_resident.html  index.html  stable_marriage.html  stable_roommates.html  student_allocation.html
site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
src/matching/: __init__.py  algorithms.py  base.py  convert.py  exceptions.py  game.py  match.py  matcher.py  matching.py  matchings.py  player.py  solver.py  warning.py
tests/: conftest.py  test_algorithms.py  test_algorithms_util.py  test_convert.py  test_matchings.py  test_player.py  test_stable_marriage.py
tests/base/: test_game.py  test_matching.py  test_player.py  util.py
tests/hospital_resident/: params.py  test_algorithm.py  test_examples.py  test_solver.py  util.py
tests/hospitalresident/: test_algorithm.py
tests/integration/: params.py  test_galeshapley.py  test_hospitalresident.py
tests/matchings/: test_single.py
tests/players/: test_faculty.py  test_hospital.py  test_player.py  test_project.py  test_supervisor.py
tests/stable_marriage/: params.py  strategies.py  test_algorithm.py  test_examples.py  test_game.py  test_solver.py  util.py
tests/stable_matching/: params.py  test_algorithm.py
tests/stable_roommates/: params.py  test_algorithm.py  test_examples.py  test_solver.py  util.py
tests/student_allocation/: params.py  test_algorithm.py  test_examples.py  test_solver.py  util.py
tests/unit/: params.py  test_faculty.py  test_game.py  test_hospital.py  test_matcher.py  test_matching.py  test_player.py  test_project.py  test_solver.py  test_util.py
tex/: hospital_resident.tex  stable_marriage.tex
tutorials/: hospital_resident.html  index.html  stable_marriage.html  stable_roommates.html  student_allocation.html
(+66 files in other folders)
