[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[project]
name = "matching"
authors = [
    { name="Henry Wilde", email="henrydavidwilde@gmail.com" },
    { name="Vince Knight" },
]
description = "A package for solving matching games"
readme = "README.md"
requires-python = ">=3.5"
license = {text = "MIT License"}
keywords = [
    "game-theory",
    "gale-shapley",
    "matching-games",
    "stable-marriage",
    "hospital-resident",
    "stable-roommates",
    "project-allocation",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.19.2"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "hypothesis>=6.31.6",
    "nbval>=0.10.0",
    "pytest>=6.2.5",
    "pytest-cov>=3.0.0",
    "pytest-randomly>=3.10",
]
docs = [
    "ipython>=7.10",
    "matplotlib>=3",
    "nbsphinx>=0.8.8",
    "pandas>=1.1.5",
    "PyYAML>=6",
    "quartodoc>=0.5.0; python_version>'3.8'",
]
lint = [
    "black[jupyter]>=22.6.0,<23",
    "ruff>=0.1.1",
]
dev = [
    "matching[docs,lint,test]",
]

[project.urls]
homepage = "https://github.com/daffidwilde/matching"
documentation = "https://daffidwilde.github.io/matching"
changelog = "https://github.com/daffidwilde/matching/blob/main/CHANGES.md"

[tool.setuptools.dynamic]
version = {attr = "matching.__version__"}

[tool.black]
line-length = 79

[tool.coverage.report]
omit = ["src/**/__init__.py"]

[tool.ruff]
extend-include = ["*.ipynb"]
extend-select = ["D", "I", "W"]
ignore = ["D105", "D107", "D202"]
line-length = 79

[tool.ruff.isort]
known-first-party = ["matching"]

[tool.ruff.per-file-ignores]
"docs/*" = ["D100", "D103", "E402"]
"tests/**/*.py" = ["D104", "D401", "E741"]
"src/**/*.py" = ["D105", "D107"]
"src/matching/base.py" = ["D401"]

[tool.ruff.pydocstyle]
convention = "numpy"
